// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handleError > calls displayNotification with the right argument when passing a VError instance. Error: MARKET_NOT_ENTERED 1`] = `
{
  "description": "Market Not Entered - No Error",
  "variant": "error",
}
`;

exports[`handleError > calls displayNotification with the right argument when passing a VError instance. Error: accountError 1`] = `
{
  "description": "Account Required - Please connect your wallet.",
  "variant": "error",
}
`;

exports[`handleError > calls displayNotification with the right argument when passing a VError instance. Error: noMetaKey 1`] = `
{
  "description": "No metadata information is present in the file",
  "variant": "error",
}
`;

exports[`handleError > calls displayNotification with the right argument when passing a VError instance. Error: walletNotConnected 1`] = `
{
  "description": "Wallet not connected",
  "variant": "error",
}
`;
